--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClCompile Include="FWApplication.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ExampleGameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SDL2.dll" />
@@ -93,6 +94,7 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="FWApplication.h" />
+    <ClInclude Include="ExampleGameObject.h" />
     <ClInclude Include="IGameObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
