--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ExampleGameObject.cpp" />
+    <ClCompile Include="Rabbit.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Visualiser.cpp" />
   </ItemGroup>
@@ -106,6 +107,7 @@
     <ClInclude Include="ExampleGameObject.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="IGameObject.h" />
+    <ClInclude Include="Rabbit.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Visualiser.h" />
   </ItemGroup>
