--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ExampleGameObject.cpp" />
     <ClCompile Include="Rabbit.cpp" />
+    <ClCompile Include="Random.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Visualiser.cpp" />
   </ItemGroup>
@@ -108,6 +109,7 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="IGameObject.h" />
     <ClInclude Include="Rabbit.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Visualiser.h" />
   </ItemGroup>
