added entityvertex, engine, entities etc.

--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -89,13 +89,17 @@
     <ClCompile Include="Cow.cpp" />
     <ClCompile Include="Creator.cpp" />
     <ClCompile Include="Edge.cpp" />
+    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="EntityVertex.cpp" />
     <ClCompile Include="FWApplication.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="IdleState.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ExampleGameObject.cpp" />
+    <ClCompile Include="Pill.cpp" />
     <ClCompile Include="Rabbit.cpp" />
     <ClCompile Include="Random.cpp" />
+    <ClCompile Include="Sword.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Visualiser.cpp" />
     <ClCompile Include="WanderingState.cpp" />
@@ -112,13 +116,17 @@
     <ClInclude Include="Creator.h" />
     <ClInclude Include="Edge.h" />
     <ClInclude Include="AEntityState.h" />
+    <ClInclude Include="Engine.h" />
+    <ClInclude Include="EntityVertex.h" />
     <ClInclude Include="FWApplication.h" />
     <ClInclude Include="ExampleGameObject.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="IdleState.h" />
     <ClInclude Include="IGameObject.h" />
+    <ClInclude Include="Pill.h" />
     <ClInclude Include="Rabbit.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="Sword.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Visualiser.h" />
     <ClInclude Include="WanderingState.h" />
