--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -84,6 +84,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ADropEntity.cpp" />
     <ClCompile Include="AEntity.cpp" />
     <ClCompile Include="ChasingState.cpp" />
     <ClCompile Include="Cow.cpp" />
@@ -97,9 +98,11 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ExampleGameObject.cpp" />
     <ClCompile Include="Pill.cpp" />
+    <ClCompile Include="PillBehaviour.cpp" />
     <ClCompile Include="Rabbit.cpp" />
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="Sword.cpp" />
+    <ClCompile Include="SwordBehaviour.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Visualiser.cpp" />
     <ClCompile Include="WanderingState.cpp" />
@@ -114,6 +117,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Cow.h" />
     <ClInclude Include="Creator.h" />
+    <ClInclude Include="ADropEntity.h" />
     <ClInclude Include="Edge.h" />
     <ClInclude Include="AEntityState.h" />
     <ClInclude Include="Engine.h" />
@@ -124,9 +128,11 @@
     <ClInclude Include="IdleState.h" />
     <ClInclude Include="IGameObject.h" />
     <ClInclude Include="Pill.h" />
+    <ClInclude Include="PillBehaviour.h" />
     <ClInclude Include="Rabbit.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Sword.h" />
+    <ClInclude Include="SwordBehaviour.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Visualiser.h" />
     <ClInclude Include="WanderingState.h" />
